[package]
name = "core_float"
version = "0.3.1"
edition = "2021"

license = "MIT"
description = "This library is based on the Rust Core Library and aims to provide an identical set of APIs for f32 and f64 floating-point types."
repository = "https://github.com/milkycopper/core_float"
readme = "README.md"
